# ros2demo

./: .gitignore  README.md
jk_demo_gst2msg/: CMakeLists.txt  package.xml
jk_demo_gst2msg/include/jk_demo_gst2msg/: NoHeadersHere_README.txt
jk_demo_gst2msg/launch/: jk_demo_gst2msg_one_stream_launch.py  jk_demo_gst2msg_two_streams_launch.py
jk_demo_gst2msg/src/: jk_GstNode.cpp  jk_GstNode.hpp  main.cpp
jk_demo_msg2cv/: CMakeLists.txt  README_service_trigger.txt  package.xml
jk_demo_msg2cv/launch/: jk_msg2cv_facedetect_launch.py
jk_demo_msg2cv/src/: jk_CompNodeService.cpp  jk_CompNodeService.hpp  jk_CompNodeSubscriber.cpp  jk_CompNodeSubscriber.hpp  jk_StreamSelector.hpp  jk_StreamSelectorImpl.cpp  jk_StreamSelectorImpl.hpp  main.cpp
